# envcc

./: .gitignore  Cargo.toml  LICENSE  README.md  package.json
.github/workflows/: build.yml  publish.yml  release.yml
src/: app.rs  env_vars.rs  input.rs  main.rs  settings.rs  ui.rs
