[package]
name = "envcc"
version = "0.1.4"
edition = "2021"
description = "TUI for configuring Claude Code environment variables"
license = "MIT"
repository = "https://github.com/niewinny/envcc"
homepage = "https://github.com/niewinny/envcc"
keywords = ["claude", "claude-code", "tui", "environment", "config"]
categories = ["command-line-utilities", "development-tools"]
authors = ["niewinny <the.tecc@gmail.com>"]

[dependencies]
ratatui = { version = "0.29", features = ["crossterm"] }
crossterm = "0.28"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ureq = "2"
scraper = "0.21"
